--- a/components/Footer/Top.module.scss
+++ b/components/Footer/Top.module.scss
@@ -45,11 +45,14 @@ $break-point: 944px;
   grid-row-gap: var(--space-3);
   grid-template-areas: 'title' 'photo' 'text';
   grid-template-columns: initial;
-  max-width: var(--size-24);
 
-  @media (min-width: $break-point) {
+  @media (min-width: 480px) {
     grid-template-areas: 'title title' 'photo text';
     grid-template-columns: auto 1fr;
+  }
+
+  @media (min-width: 960px) {
+    max-width: var(--size-24);
   }
 
   h3 {
@@ -63,12 +66,15 @@ $break-point: 944px;
   img {
     border-radius: 0.25em;
     grid-area: photo;
+    height: auto;
+    width: 100%;
   }
 
   p {
     @include typography.text-size(sm);
 
     grid-area: text;
+    max-width: 72ch;
   }
 }
 
@@ -114,6 +120,9 @@ $break-point: 944px;
 
     &:hover {
       color: var(--warm-gray-900);
+    }
+
+    &[href^='http']:hover {
       text-decoration-color: var(--warm-gray-400);
     }
 
@@ -146,6 +155,16 @@ $break-point: 944px;
     &[href*='twitter.com']::before {
       mask-image: url('./icons/twitter.svg');
     }
+
+    &[href^='http']:link:hover::before {
+      background-color: var(--blue-800);
+    }
+    &[href^='http']:visited:hover::before {
+      background-color: var(--purple-800);
+    }
+    &[href^='http']:active::hover::before {
+      background-color: var(--red-800);
+    }
   }
 
   dd {
@@ -157,11 +176,7 @@ $break-point: 944px;
     display: grid;
     grid-column-gap: var(--space-5);
     grid-row-gap: var(--space-5);
-    grid-template-columns: initial;
-
-    @media (min-width: $break-point) {
-      grid-template-columns: 1fr 1fr;
-    }
+    grid-template-columns: repeat(auto-fit, minmax(var(--size-8), 1fr));
   }
 
   dt {
@@ -172,26 +187,4 @@ $break-point: 944px;
     margin-bottom: var(--space-3);
     text-transform: uppercase;
   }
-}
-
-// .nav svg {
-//   color: var(--warm-gray-400);
-//   display: inline-block;
-//   height: auto;
-//   padding-right: var(--space-2);
-//   transform: translateY(-1px);
-//   vertical-align: middle;
-//   width: 2.5ch;
-// }
-
-.nav a:link:hover svg {
-  color: var(--blue-800);
-}
-
-.nav a:visited:hover svg {
-  color: var(--purple-800);
-}
-
-.nav a:active:hover svg {
-  color: var(--red-700);
 }
