--- a/styles/_utils.scss
+++ b/styles/_utils.scss
@@ -1,10 +1,16 @@
 %centered {
+  --margin: var(--space-3);
+
   margin: 0 auto;
   max-width: var(--size-60);
   padding-bottom: 0;
-  padding-left: calc(var(--space-5) + env(safe-area-inset-left, 0));
-  padding-right: calc(var(--space-5) + env(safe-area-inset-right, 0));
+  padding-left: calc(var(--margin) + env(safe-area-inset-left, 0));
+  padding-right: calc(var(--margin) + env(safe-area-inset-right, 0));
   padding-top: 0;
+
+  @media (min-width: 860px) {
+    --margin: var(--space-5);
+  }
 }
 
 .hide,
